Use Java Toolchains to improve Java support
- Use Java toolchains to run and compile the build.
- Add Foojay toolchain resolver, that will automatically download the required toolchains.
- Use Java 21 to run Gradle and compile the code.
- Set the minimum supported Java version to 8.
- Set the maximum supported Java version to 21.
- Create a new test task to run the tests with Java 21.
- Fix code to support Java 8.